--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_grey">#555555</color>
+    <color name="grey">#AAAAAA</color>
     <color name="signal_leader_message">#AA60D8FB</color>
     <color name="own_message">#00EEEEEE</color>
     <color name="other_message">#AABBBBBB</color>
+    <color name="active_signal">#6BE68E</color>
+    <color name="expired_signal">#FF6969</color>
 </resources>
