--- a/app/src/main/res/layout/fragment_signal_detail.xml
+++ b/app/src/main/res/layout/fragment_signal_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".SignalDetailFragment">
+    tools:context=".signal.SignalDetailFragment">
 
     <LinearLayout
         android:id="@+id/layout"
