--- a/app/src/main/res/layout/fragment_signal_display.xml
+++ b/app/src/main/res/layout/fragment_signal_display.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".SignalDisplayFragment">
+    tools:context=".signal.SignalDisplayFragment">
 
     <TextView
         android:id="@+id/txtTitle"
