--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,49 +7,57 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <SearchView
+            android:id="@+id/searchBar"
+            android:layout_width="357dp"
+            android:layout_height="62dp"
+            android:queryHint=" Search a stock!">
+
+        </SearchView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/header1"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="TextView"
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/header2"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:text="TextView"
+                android:textSize="19sp" />
+
+            <TextView
+                android:id="@+id/header3"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:text="TextView"
+                android:textSize="19sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listViewObject"
-        android:layout_width="340dp"
-        android:layout_height="498dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="377dp"
+        android:layout_height="375dp"
+        android:layout_marginTop="148dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.777" />
-
-    <TextView
-        android:id="@+id/header1"
-        android:layout_width="83dp"
-        android:layout_height="44dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
-
-    <TextView
-        android:id="@+id/header2"
-        android:layout_width="83dp"
-        android:layout_height="45dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.198" />
-
-    <TextView
-        android:id="@+id/header3"
-        android:layout_width="78dp"
-        android:layout_height="42dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.894"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.201" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
