--- a/app/src/main/res/drawable/round_outline.xml
+++ b/app/src/main/res/drawable/round_outline.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/dark_grey"/>
     <stroke android:width="3dp" android:color="#AAAAAA"/>
     <corners android:radius="20dp"/>
 
