--- a/app/src/main/res/layout/watch_list_item.xml
+++ b/app/src/main/res/layout/watch_list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tickerView"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:text="TextView"
+        android:text="Loading..."
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
-        android:text="TextView"
+        android:text="Loading..."
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tickerView"
@@ -36,9 +36,10 @@
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginStart="32dp"
-        android:text="TextView"
+        android:text="Loading..."
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/txtPrice"
         app:layout_constraintTop_toTopOf="@+id/txtPrice" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
