--- a/app/src/main/res/layout/fragment_modify_watchlist.xml
+++ b/app/src/main/res/layout/fragment_modify_watchlist.xml
@@ -28,20 +28,24 @@
             android:id="@+id/aButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:text="Add"
+            android:layout_marginStart="18dp"
+            android:textColor="@android:color/black"
+            android:text="Authorize Addition"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/rButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:text="Delete"
+            android:layout_marginStart="18dp"
+            android:background="@color/expired_signal"
+            android:textColor="@android:color/black"
+            android:text="Authorize Removal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/aButton"
